# conan_playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
binary/: CMakeLists.txt  main.cpp  nontrivial.cpp  nontrivial.h
conan/: build_profile
lib1/: CMakeLists.txt  lib1.cpp
lib2/: CMakeLists.txt  lib2.cpp
lib3/: CMakeLists.txt  lib3.cpp
src/binary/: CMakeLists.txt  main.cpp  raii_signal.cpp  raii_signal.h
src/lib1/: CMakeLists.txt  lib1.cpp
src/lib1/include/: lib1.h
src/lib1/test/: CMakeLists.txt  main.cpp
src/lib2/: CMakeLists.txt
src/lib2/include/: lib2.h
src/lib2/test/: CMakeLists.txt  main.cpp
src/lib3/: CMakeLists.txt
src/lib3/include/: lib3.h
src/lib3/test/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  main_gtest.cpp
test/: CMakeLists.txt  main_catch.cpp  main_gtest.cpp
